updated about and interests section and fixed some spacing issues.

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,7 @@ body {
     background-color: #1a1b21;
     display: flex;
     justify-content: center;
+    padding-bottom: 0px;
 }
 
 .buttonContainer > a {
@@ -88,7 +89,7 @@ button > img {
 
 .mainBody {
     background-color: #1a1b21;
-    margin-top: -12px;
+    margin-top: -18px;
     color: white;
     font-family: Inter;
     margin-left: 0;
@@ -98,12 +99,12 @@ button > img {
 
 .mainBody > h1 {
     text-align: center;
-    font-size: 16px;
+    font-size: 24px;
     padding-top: 20px;
 }
 
 .mainBody > p {
-    font-size: 11px;
+    font-size: 18px;
     margin: 0 35px;
 }
 
